# pycommentcleaner

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
examples/: LICENSE  README.md  example.py  sample_script.py
pycommentcleaner/: __init__.py
pycommentcleaner.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_cli.py  test_core.py
